[gd_scene load_steps=7 format=3 uid="uid://c35ekx8l4seuy"]

[ext_resource type="Script" uid="uid://psn5q1bqgusr" path="res://scenes/main_menu.gd" id="1_l6cm7"]
[ext_resource type="AudioStream" uid="uid://bgontojkulhnc" path="res://audio/startsound.mp3" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://dgtp5knhwof0n" path="res://sprites/default/ketsu wallpaper.png" id="3_bqqt6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(0.6474165, 0, 0.1333814, 1)
corner_radius_top_left = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(0.29033563, 0.12446212, 0.24998403, 1)
corner_radius_top_left = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.2901961, 0.1254902, 0.2509804, 1)
corner_radius_top_left = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -2.0
offset_right = -6.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(957, 538)
texture = ExtResource("3_bqqt6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -258.5
offset_right = 637.98914
offset_bottom = 303.0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_l6cm7")
text = "Settings"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ekxnf")
text = "Exit
"

[node name="StartSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ekxnf")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
